--- a/controllerpercorso.ui
+++ b/controllerpercorso.ui
@@ -150,7 +150,7 @@
   </action>
   <action name="actionConfigura">
    <property name="text">
-    <string>configura</string>
+    <string>Configura</string>
    </property>
   </action>
   <action name="actionInfo">
